/*
  Cosmo Dashboard API
  Manipulate cosmo dashboard resource API
*/

syntax = "proto3";

package dashboard.v1alpha1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service AuthService {
  // ID and password to login
  rpc Login(LoginRequest) returns (LoginResponse);
  // Delete session to logout
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Verify authorization
  rpc Verify(google.protobuf.Empty) returns (VerifyResponse);
  // Kubernetes ServiceAccount to login
  rpc ServiceAccountLogin(ServiceAccountLoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string user_name = 1 [(validate.rules).string = { min_len: 1 }];
  string password = 2  [(validate.rules).string = { min_len: 1 }];
}

message LoginResponse {
  string user_name = 1;
  google.protobuf.Timestamp expire_at = 2;
  bool require_password_update = 3;
}

message VerifyResponse {
  string user_name = 1;
  google.protobuf.Timestamp expire_at = 2;
  bool require_password_update = 3;
}

message ServiceAccountLoginRequest {
  string token = 1 [(validate.rules).string = { min_len: 1 }];
}
